--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "devDependencies": {
     "mocha": "^3.2.0",
     "three": "^0.84.0"
+  },
+  "dependencies": {
+    "express": "^4.15.2",
+    "mongodb": "^2.2.25"
   }
 }
