--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --reporter list"
+    "test": "jasmine-node test"
   },
   "repository": {
     "type": "git",
@@ -17,13 +17,14 @@
   },
   "homepage": "https://github.com/azhang496/team-rocket#readme",
   "devDependencies": {
-    "mocha": "^3.2.0",
-    "three": "^0.84.0"
+    "jasmine-node": "^1.14.5",
+    "request": "^2.81.0"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "mongodb": "^2.2.25",
-    "mongoose": "^4.9.2"
+    "mongoose": "^4.9.2",
+    "request": "^2.81.0"
   }
 }
