--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "express": "^4.15.2",
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.2",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^1.0.0"
   }
 }
